Revision history for App-Doh

          - Made env_var into a class method
          - Uses Web::Components::Role::TT
          - Idiomatic rename of Functions to Util
          - Moving Role::Template to own distribution

0.13.1    2015-08-31 18:23:12
          - Updated prereqs

0.12.1    2015-08-31 18:12:16
          - Merged Config common_links into stash_attr
          - Fixed locale/language leaky abstraction from request object
          - Added expected_rv parameters to Daemon
          - Merged Preference and CommonLinks roles into PageConfiguration
          - Moved Usul attribute constructor to Functions

0.11.1    2015-08-28 12:54:54
          - Created Config stash_attr from preferences and lists in code
          - Passing tests again
          - Switched to Web::Components
          - Enhanced type constraint names
          - Renamed Web::Components loader and role
          - Made APP_DOH the env var prefix for consistancy
          - Stopped putting request object in stash
          - Made cdnjs configurable via jslibs in Config
          - Stopped using state keyword
          - Model execute now throws if method not found
          - Added support for making Debian packages
          - Added missing middleware dependecies
          - Simplified load_components signature
          - Added make-site-tarball
          - Added caching to generate make function
          - Config monikers was replace with components
          - Model get_stash was renamed to initialise_stash
          - Updated prereqs
          - Made program wrappers work in taint mode

0.10.1    2015-05-11 00:39:33
          - Fixed memory leak in component DI
          - Made User class a model component and used DI
          - Implement dependency injection in components
          - ComponentLoading returns plain text 500 if Request->new fails
          - Added post_install and uninstall commands to CLI
          - Scripts sources a local env script